tests/snapshots/ui__diff_160x48_second_file.snap
---
source: tests/ui.rs
expression: "h.render(160, 48)"
---
┌──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ aa31857 Add tooltips · src/tooltip.gd (2/2)                                                                                                     ● 0/2 viewed │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 ▾   A src/tooltip.gd                                                                                                                                        +6
          @@ -0,0 +1,6 @@
       1 + extends Control
       2 +
       3 + func _ready():
       4 +     var label = Label.new()
       5 +     label.text = item.name
       6 +     add_child(label)



































────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
 ]/[ hunk · }/{ file · enter collapse · space viewed · f files · z wrap · e edit · n/p commit · W hide whitespace · esc back
