tests/snapshots/ui__diff_80x24.snap
---
source: tests/ui.rs
assertion_line: 63
expression: "h.render(80, 24)"
---
 aa31857 Add tooltips · assets/theme.tres (1/2)                    ● 0/2 viewed
────────────────────────────────────────────────────────────────────────────────
 ▾   A assets/theme.tres                                                     +1
          @@ -0,0 +1 @@
       1 + [gd_resource type="Theme"]
────────────────────────────────────────────────────────────────────────────────
 ▾   A src/tooltip.gd                                                        +6
          @@ -0,0 +1,6 @@
       1 + extends Control
       2 +
       3 + func _ready():
       4 +     var label = Label.new()
       5 +     label.text = item.name
       6 +     add_child(label)








────────────────────────────────────────────────────────────────────────────────
 ]/[ hunk · }/{ file · enter collapse · space viewed · f files · esc back
