tests/snapshots/ui__diff_uncommitted_80x24.snap
---
source: tests/ui.rs
expression: "h.render(80, 24)"
---
 Uncommitted · src/inventory.gd (1/3)                              ● 0/3 viewed
────────────────────────────────────────────────────────────────────────────────
 ▾   M src/inventory.gd                                                      +2
          @@ -2,3 +2,5 @@ extends Node
   2   2
   3   3   func _ready():
   4   4       pass
       5 +
       6 + # uncommitted tweak
────────────────────────────────────────────────────────────────────────────────
 ▸   ? Cargo.lock                                                            +1
          ⋯ collapsed (lockfile) · enter to expand
────────────────────────────────────────────────────────────────────────────────
 ▾   ? TODO.md                                                               +1
          @@ -0,0 +1,1 @@
       1 + notes






────────────────────────────────────────────────────────────────────────────────
 ]/[ hunk · }/{ file · f files · space viewed · n/p commit · e edit · esc back
