tests/snapshots/ui__main_160x48_commit_selected.snap
---
source: tests/ui.rs
assertion_line: 53
expression: "h.render(160, 48)"
---
 feature/inventory · base main @0f6866e · 4 commits                                                                                        ● live · 4 to review
┌ Timeline ────────────────────────────────────────────────────────────┐┌ Files · 8a90517 Fix item drag ───────────────────────────────────────────────────────┐
│ ◌ Uncommitted                                        3 files   +4    ││▸  M  src/tooltip.gd                                                            +2 -1 │
│▸● 8a90517 Fix item drag                                        +2 -1 ││                                                                                      │
│ ● aa31857 Add tooltips                                         +7    ││                                                                                      │
│ ● 3ddc35f Inventory UI                                        +60    ││                                                                                      │
│ ● 289a7a3 Data model                                           +3    ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
│                                                                      ││                                                                                      │
├──────────────────────────────────────────────────────────────────────┤│                                                                                      │
│ Σ Branch total                                       7 files  +75    ││                                                                                      │
└──────────────────────────────────────────────────────────────────────┘└──────────────────────────────────────────────────────────────────────────────────────┘
 enter files · u next to review · r view all · w/b jump · , settings · ? help
