tests/snapshots/ui__main_80x24.snap
---
source: tests/ui.rs
assertion_line: 51
expression: "h.render(80, 24)"
---
 feature/inventory · main                                  ● live · 4 to review
┌ Timeline ────────────────────────────────────────────────────────────────────┐
│▸◌ Uncommitted                                                3 files   +4    │
│ ● 8a90517 Fix item drag                                                +2 -1 │
│ ● aa31857 Add tooltips                                                 +7    │
│ ● 3ddc35f Inventory UI                                                +60    │
│ ● 289a7a3 Data model                                                   +3    │
├──────────────────────────────────────────────────────────────────────────────┤
│ Σ Branch total                                               7 files  +75    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Files · Uncommitted ─────────────────────────────────────────────────────────┐
│▸  M  src/inventory.gd                                                    +2  │
│   ?  Cargo.lock                                             ⋯ collapsed  +1  │
│   ?  TODO.md                                                             +1  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 enter files · u next to review · r view all · w/b jump · , settings · ? help
