tests/snapshots/ui__partly_viewed_80x24.snap
---
source: tests/ui.rs
expression: "h.render(80, 24)"
---
┌──────────────────────────────────────────────────────────────────────────────┐
│ feature/inventory · main                                ● live · 4 to review │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Timeline ────────────────────────────────────────────────────────────────────┐
│ ◌ Uncommitted                                                3 files   +4    │
│ ● 8a90517 Fix item drag                                                +2 -1 │
│▸◐ aa31857 Add tooltips                                                 +7    │
│ ● 3ddc35f Inventory UI                                                +60    │
│ ● 289a7a3 Data model                                                   +3    │
├──────────────────────────────────────────────────────────────────────────────┤
│ Σ Branch total                                               7 files  +75    │
└──────────────────────────────────────────────────────────────────────────────┘
┌ Files · aa31857 ─────────────────────────────────────────────────────────────┐
│▸✓ A  assets/theme.tres                                                   +1  │
│   A  src/tooltip.gd                                                      +6  │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 enter files · u next to review · r view all · w/b jump · , settings · ? help
